[tool.poetry]
name = "tasman-identity-graph"
version = "1.0.0"
description = "Using the connected component algorithm to resolve an identity graph."
authors = ["Tasman"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
isort = "^5.12.0"

[tool.poetry.group.dbt.dependencies]
dbt-snowflake = "^1.6.0"
dbt-bigquery = "^1.6.0"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.3.0"
sqlfluff-templater-dbt = "^2.3.0"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
extend-exclude = [".venv/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
