# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["uv_build>=0.8.2,<1.0.0"]
build-backend = "uv_build"

[project]
name = "tasman-identity-graph"
version = "1.0.0"
description = "Using the connected component algorithm to resolve an identity graph."
authors = [
    {name = "Tasman Analytics"},
]
requires-python = ">=3.10,<3.13"
readme = "README.md"

[dependency-groups]
dbt = [
    "dbt-snowflake>=1.6.0,<2.0.0",
    "dbt-bigquery>=1.6.0,<2.0.0",
]
dev = [
    "sqlfluff>=2.3.0,<3.0.0",
    "sqlfluff-templater-dbt>=2.3.0,<3.0.0",
]


[tool.uv]
default-groups = [
    "dbt",
    "dev",
]
package = false

[tool.uv.build-backend]
namespace = true
